name:                haskell-tools
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-tools#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2015 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:   HaskellTools

  other-modules:     Paths_haskell_tools
                   , HaskellTools.Types
                   , HaskellTools.Config
                   , HaskellTools.Hackage
                   , HaskellTools.Github
                   , HaskellTools.Database
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , bytestring >= 0.10
                     , lens-aeson
                     , aeson
                     , pipes
                     , split
                     , text
                     , scientific >= 0.3
                     , optparse-applicative >= 0.12
                     , string-conversions >= 0.4
                     , hackage-db
                     , Cabal
                     , pasta
                     , hasql
                     , vector >= 0.11
                     , http-types
                     , http-client >= 0.4
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable haskell-tools-load
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-tools
                     , pipes
                     , hasql
                     , string-conversions >= 0.4
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite haskell-tools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-tools
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-tools
